Perkin-UAT/force-app/main/default/objects/B2B_Subscription_Items__c/B2B_Subscription_Items__c.object-meta.xml
<CustomObject>
    <label>B2B Subscription Items</label>
    <nameField>
        <displayFormat>SubItem# {00000}</displayFormat>
        <label>B2B Subscriptions tems</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Subscription Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>