Perkin-UAT/force-app/main/default/objects/B2B_Subscription_Items__c/fields/B2B_Discount__c.field-meta.xml
<CustomField>
    <fullName>B2B_Discount__c</fullName>
    <formula>( ( B2B_List_Price__c -  B2B_Unit_Price__c ) / B2B_List_Price__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>