Perkin-UAT/force-app/main/default/objects/B2B_Subscription_Items__c/fields/B2B_Product__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>B2B Subscription Items</relationshipLabel>
    <relationshipName>B2B_Subscription_Items</relationshipName>
    <type>Lookup</type>
</CustomField>