Perkin-UAT/force-app/main/default/objects/B2B_Subscription_Items__c/fields/B2B_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>B2B_Subscriptions__c</fullName>
    <label>B2B Subscriptions</label>
    <referenceTo>B2B_Subscriptions__c</referenceTo>
    <relationshipLabel>B2B Subscription Items</relationshipLabel>
    <relationshipName>B2B_Subscription_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>