Perkin-UAT/force-app/main/default/objects/B2B_Subscription_Items__c/fields/B2B_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>B2B_Total_Price__c</fullName>
    <formula>B2B_Quantity__c *  B2B_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>