Perkin-UAT/force-app/main/default/objects/B2B_Subscription_Items__c/fields/B2B_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>B2B_Unit_Price__c</fullName>
    <label>B2B Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>